<resources>
    <string name="lorem_ipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tempus massa, in faucibus magna. Pellentesque feugiat faucibus ex a efficitur. Phasellus velit enim, hendrerit vitae magna at, vulputate tincidunt nisi. Etiam id sagittis leo, vitae iaculis mi. Integer vel sapien purus. Proin est velit, dapibus et pulvinar in, porttitor eu odio. Sed tincidunt tincidunt urna, suscipit tincidunt quam scelerisque nec. Duis elementum tortor eu erat mollis pharetra. Integer egestas lorem ut turpis scelerisque pretium. Integer nec justo ut dui lobortis tincidunt non nec odio. Vivamus eu ligula eleifend, ornare leo nec, hendrerit dui. Sed convallis ex vel felis interdum aliquam. Donec quis velit et orci suscipit ornare eget eget purus. Curabitur lobortis ex eu enim finibus bibendum vel in libero.

        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sodales ipsum orci, ut ornare purus congue molestie. Curabitur eu faucibus nisi, ultricies tempor orci. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus ut lobortis augue. Curabitur lobortis malesuada aliquet. Donec quis turpis vel enim fermentum dictum ac vitae nunc. Aliquam erat volutpat. Quisque rutrum in orci eu varius. Sed et quam sit amet ligula feugiat malesuada sed sit amet enim. Fusce ullamcorper feugiat commodo. Donec aliquam arcu quis nulla dictum commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
	<string name="map_loading">Trwa ładowanie mapy...</string>
	<string name="welcome_start">Podejmij wyzwanie</string>
	<string name="reflections">Rozważania</string>
	<string name="description">Opis trasy</string>
	<string name="about_edk">Ekstremalna Droga Krzyzowa to forma duchowości, która dla wielu staje się sposobem na życie. Prawdziwe Spotkanie z Nim pośrodku Zmagania sprawia, że nie chce się już żyć normalnie, tylko ekstremalnie, czyli w pełni.\n\nEkstremalna Droga Krzyżowa jest proponowaną formą duchowości.\n\nNie jest to pielgrzymka.\nEDK polega na pokonaniem w nocy wybranej trasy, medytowaniu rozważań i zmaganiu się z własnymi słabościami.\nMa charakter indywidualny, podczas przejścia wybraną trasą, w razie jakichkolwiek nieprzewidzianych zdarzeń, jesteś zdany wyłącznie na własne siły.\n\nWiecej informacji znajdziesz na naszej stronie:</string>
	<string name="about_app">Aplikacja pomaga uczestnikom Ekstremalnej Drogi Krzyżowej przeżyć ją w pełni.\n\nZamieszczone przy każdej stacji wskazówki oraz nawigacja GPS pozwolą skupić się na pokonywaniu własnych słabości, bez konieczności przejmowania się szczegółami.\n\nEDK to jednak przede wszystkim forma duchowości. Medytacja załączonych rozważań pozwoli na jeszcze bliższe Spotkanie z Nim.\n\nAutorem aplikacji jest Paweł Wawrzynek. Jeżeli masz jakiekolwiek sugestie, napisz!</string>
	<string name="station_contact">Jak chcesz się skontatkować z organizatorami?</string>
	<string name="station_help">Czy napewno chcesz wezwać pomoc?</string>
    <string name="main_gpsQuestion">Moduł GPS jest wyłączony a będzie potrzebny do nawigacji. Chcesz go teraz włączyć?
    </string>
    <string name="station_helpConfirmation">Twoje współrzędne zostały wysłane do organizatorów. Oczekuj na pomoc w tym
        miejscu.
    </string>
	<string name="station_naviActive">Nawigacja</string>
	<string name="station_naviInactive">Nawigacja niedostępna</string>
	<string name="pref_followLocationOnMap">FollowLocationOnMap</string>
	<string name="pref_backgroundTrackingOn">trackingTurnedOn</string>
	<string name="pref_reflectionsYear">reflectionsYear</string>
	<string name="pref_audioDownloadDialogShown">audioDownloadDialogShown</string>
	<string name="app_name">EDK</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_settings">Settings</string>
	<string name="action_opis">Opis trasy</string>
	<string name="action_rozwazania">Rozważania</string>
	<string name="action_GPS">Mapa</string>
	<string name="background_gps_stop">Wyłącz aplikację</string>
	<string name="trasy">Trasy</string>
	<string name="podejmij_wyzwanie">Podejmij wyzwanie!</string>
	<string name="rozwazania">Rozważania</string>
	<string name="opcje">Opcje</string>
	<string name="o_edk">Informacje o EDK</string>
	<string name="trasy_text">Wybierz sobie trasę!</string>
	<string name="podejmij_wyzwanie_text">Podejmij wyzwanie!</string>
	<string name="rozwazania_text">Wybierz sobie rozwazania!</string>
	<string name="o_edk_text">Droga Krzyżowa może zaboleć. Proponujemy Ci rozważanie jej na dystansie około 40 km, w nocy, w milczeniu i samotności. \nEDK to: Wyzwanie, Droga, Zmaganie, Spotkanie. \n \nW aplikacji i na naszej stronie proponujemy Ci przykładowe trasy, którymi możesz podążać. Możesz także wymyślić swoją trasę. \nJeśli masz pomysł na nową trasę lub chcesz stworzyć rejon EDK - skontaktuj się z nami. \n \nWięcej informacji znajdziesz na:</string>
	<string-array name="stations">
		<item>Wprowadzenie</item>
		<item>Stacja I Pan Jezus skazany na śmierć</item>
		<item>Stacja II Pan Jezus bierze krzyż na swe ramiona</item>
		<item>Stacja III Pierwszy upadek Pana Jezusa</item>
		<item>Stacja IV Pan Jezus spotyka swą matkę</item>
		<item>Stacja V Szymon Cyrenejczyk pomaga nieść krzyż Jezusowi</item>
		<item>Stacja VI Święta Weronika ociera Twarz Pana Jezusa</item>
		<item>Stacja VII Pan Jezus upada pod krzyżem po raz drugi</item>
		<item>Stacja VIII Pan Jezus pociesza płaczące niewiasty</item>
		<item>Stacja IX Trzeci upadek Pana Jezusa</item>
		<item>Stacja X Pan Jezus z szat obnażony</item>
		<item>Stacja XI Pan Jezus przybity do krzyża</item>
		<item>Stacja XII Pan Jezus umiera na krzyżu</item>
		<item>Stacja XIII Pan Jezus zostaje zdjęty z krzyża</item>
		<item>Stacja XIV Pan Jezus złożony do grobu</item>
		<item>Podsumowanie</item>
	</string-array>
	<string-array name="considerations_years">
		<item>2016</item>
	</string-array>
	<string name="out_of_track_message">Jesteś poza trasą</string>
	<string name="go_to_consideration">Przejdź do rozważań</string>
	<string name="near_checkpoint_message">"Jesteś w pobliżu stacji "</string>
	<string name="back_on_track_message">Jesteś na trasie</string>
	<string name="navigation_on_message">Nawigacja GPS włączona</string>
	<string name="end_dialog_message">Czy na pewno chcesz zakończyć pracę aplikacji?</string>
	<string name="no">Nie</string>
	<string name="yes">Tak</string>
	<string name="wait_for_position">Oczekiwanie na określenie Twojej pozycji</string>
	<string name="title_activity_end">Zespół EDK</string>
	<string name="thanks_in_the_end">Dziękujemy za skorzystanie z aplikacji</string>
	<string name="listen">Odsłuchaj</string>
	<string name="waiting_for_position_message">Określanie Twojej pozycji</string>
	<string name="stop_listening">Zatrzymaj</string>
	<string name="GPS_off_warning_message">GPS jest wyłączony - Twoja pozycja nie będzie dokładnie określana</string>
	<string name="go_to_location_settings">Przejdź do ustawień lokalizacji</string>
	<string name="ignore">Ignoruj</string>
	<string name="description_to_station">"Dojście do stacji "</string>
	<string name="track_overview">Podgląd trasy</string>
	<string name="station">"Stacja "</string>
	<string name="show_track_on_map">Pokaż trasę na mapie</string>
	<string name="no_info_about_track_message">Brak informacji o wybranej trasie</string>
	<string name="warning_dialog_title">Powiadomienie</string>
	<string name="busy_dialog_title">Proszę czekać</string>
	<string name="download_dialog_message">Trwa pobieranie danych</string>
	<string name="unrecognized_error_while_reading_track">Wystapił nieoczekiwany błąd przy próbie wczytania trasy</string>
	<string name="no_territories_found">Nie można znaleźć żadnych rejonów. Połącz się z internetem i spróbuj ponownie</string>
	<string name="no_info_about_tracks_in_region">Informacje o trasach w wybranym rejonie są niedostępne</string>
	<string name="instruction_how_to_end_app">Naciśnij klawisz powrotu, aby wyjść</string>
	<string name="start_navigation">Nawiguj</string>
	<string name="next_considerations">Następne</string>
	<string name="previous_considerations">Poprzednie</string>
	<string name="track_chooser_title">Wybierz trasę:</string>
	<string name="stations_chooser_title">Wybierz stację:</string>
	<string name="city_chooser_title">Wybierz miasto:</string>
	<string name="county_chooser_title">Wybierz województwo:</string>
	<string name="considerations_year_chooser">Wybierz rocznik rozważań:</string>
</resources>