<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_considerations"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/considerations"
        android:title="@string/action_rozwazania"/>
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/tracks"
        android:title="@string/action_GPS"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/finish"
        android:title="@string/background_gps_stop"/>
        <!-- item
        android:id="@+id/action_navigation"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/navigation"
        android:title="@string/background_gps_stop"/-->

</menu>